--- a/sp4.html
+++ b/sp4.html
@@ -218,11 +218,11 @@
             <div class="col-lg-5">
                 <div class="text-center mb-4"><img src="anh/spnb/sp4.jpg" id="mainImage" class="img-fluid"  alt="Set Đồ Tết Áo Dài Bé Trai"></div>
                 <div class="d-flex justify-content-center gap-3 overflow-x-auto pb-2">
-                    <img src="anh/spnb/sp4.jpg" class="thumb-img active" onclick="changeImg(this)" alt="">
-                    <img src="anh/spnb/sp4.1.jpg" class="thumb-img" onclick="changeImg(this)" alt="">
-                    <img src="anh/spnb/sp4.2.jpg" class="thumb-img" onclick="changeImg(this)" alt="">
-                    <img src="anh/spnb/sp4.3.jpg" class="thumb-img" onclick="changeImg(this)" alt="">
-                    <img src="anh/spnb/sp4.4.jpg" class="thumb-img" onclick="changeImg(this)" alt="">
+                    <img src="https://huynhthithanhtra181206-stack.github.io/Twee/anh/spnb/sp4.jpg" class="thumb-img active" onclick="changeImg(this)" alt="">
+                    <img src="https://huynhthithanhtra181206-stack.github.io/Twee/anh/spnb/sp4.1.jpg" class="thumb-img" onclick="changeImg(this)" alt="">
+                    <img src="https://huynhthithanhtra181206-stack.github.io/Twee/anh/spnb/sp4.2.jpg" class="thumb-img" onclick="changeImg(this)" alt="">
+                    <img src="https://huynhthithanhtra181206-stack.github.io/Twee/anh/spnb/sp4.3.jpg" class="thumb-img" onclick="changeImg(this)" alt="">
+                    <img src="https://huynhthithanhtra181206-stack.github.io/Twee/anh/spnb/sp4.4.jpg" class="thumb-img" onclick="changeImg(this)" alt="">
                 </div>
             </div>
 
@@ -709,4 +709,5 @@
     });
 </script>
 </body>
+
 </html>
