--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             <div class="card product-card shadow-sm">
                 <div class="img-wrapper">
                     <div>
-                        <img src="anh/spnb/sp1.jpg" class="card-img-top" alt="Set Bé Tim Xanh">
+                        <img src="spnb/sp1.1.jpg" class="card-img-top" alt="Set Bé Tim Xanh">
                     </div>
                     <a href="sp1.html" class="btn btn-primary view-btn">Xem chi tiết</a>
 
@@ -396,3 +396,4 @@
 <script src="JS_GioHang.js"></script>
 </body>
 </html>
+
